
This file shows the changes in recent releases of MODX. The most current release is usually the
development release, and is only shown to give an idea of what's currently in the pipeline.

- Adjust modResponse contentType loading to allow overriding in custom resource classes
- Fix critical timezone issue introduced for [#6077]

MODX Revolution 2.2.0-rc-2 (December 16, 2011)
====================================
- [#3033] Add method to reload Context data in same request
- [#6372] Add explicit resource_duplicate permission for duplicating a resource
- [#6364] Fix incorrect lexicon reference in package versions grid
- [#6365] Add manager_login_url_alternate setting which allows for setting a custom manager login URL
- [#6077] Override PHP default timezone via System/Context Settings
- [#5709] Fix issue where drag/drop in left trees did not work when package management was open
- [#6153] Prevent enter key from sending Message when typing in messages page
- [#6349] Properties can now belong to areas, and are grouped in grid by area
- [#6344] Fix various pathing issues when drag/dropping files into content
- [#5941] Add anonymous Load Only ACL when creating contexts
- [#6247] Fix minify issues outside of $_SERVER['DOCUMENT_ROOT']
- Improve skipFiles attribute for file media sources to allow MODX tags and hiding directories
- [#6336] Fix error when updating property via window in media source properties grid
- Fix various issues with permissions and ACLs on Media Sources
- [#6306] Fix issue with close button always prompting changes made when changes may not have been made
- [#6317] Fix issue with combo editor rendering in grids
- [#6307] Save button now properly resets to disabled after save
- [#6313] Fix issue with renaming content field label on derivative resource types
- [#6084] Fix upgrade from 2.0.x releases
- Add OnManagerPageBeforeRender and OnManagerPageAfterRender events
- [#6207] Prevent overwriting static element file content when changing a static source