@@ -2,6 +2,7 @@
 This file shows the changes in recent releases of MODX. The most current release is usually the
 development release, and is only shown to give an idea of what's currently in the pipeline.
 
+- [#6417] Fix issue with modResource class_key being incorrectly set
 - Adjust modResponse contentType loading to allow overriding in custom resource classes
 - Fix critical timezone issue introduced for [#6077]
 
